force-app/main/default/objects/Advancement_Report__c/Advancement_Report__c.object-meta.xml
<CustomObject>
    <label>Advancement Report</label>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Advancement Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advancement Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>