force-app/main/default/objects/Advancement_Report__c/fields/Report_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Description__c</fullName>
    <label>Report Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>