force-app/main/default/objects/Advancement_Report__c/fields/Report_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Short_Description__c</fullName>
    <label>Report Short Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>