force-app/main/default/objects/Advancement_Report__c/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <label>Report URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>