force-app/main/default/objects/Advancement_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advancement_Report_Name__c</columns>
    <columns>Report_Short_Description__c</columns>
    <columns>Report_URL__c</columns>
    <columns>Thumbnail_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>